<resources>
    <string name="app_name">newsApplication</string>
    <string name="news_feed">News Feed</string>
    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="specific_news">Specific News</string>
</resources>